<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_appliedjobs"
            android:icon="@drawable/ic_baseline_work_24"
            android:title="@string/menu_appliedjobs" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_baseline_analytics_24"
            android:title="@string/menu_analytics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_helpcenter"
            android:icon="@drawable/ic_baseline_help_center_24"
            android:title="@string/menu_helpcenter" />
    </group>
</menu>