<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="e_navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ehome"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_epostedjobs"
            android:icon="@drawable/ic_baseline_work_24"
            android:title="@string/menu_postedjobs" />
        <item
            android:id="@+id/nav_eprofile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_esettings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_ehelpcenter"
            android:icon="@drawable/ic_baseline_help_center_24"
            android:title="@string/menu_helpcenter" />
    </group>
</menu>