<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.prontojob.uijs.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_appliedjobs"
        android:name="com.example.prontojob.uijs.appliedjobs.AppliedJobsFragment"
        android:label="@string/menu_appliedjobs"
        tools:layout="@layout/fragment_applied_jobs" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.prontojob.uijs.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.prontojob.uijs.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_helpcenter"
        android:name="com.example.prontojob.uijs.helpcenter.HelpCenterFragment"
        android:label="@string/menu_helpcenter"
        tools:layout="@layout/fragment_help_center" />
    <fragment
        android:id="@+id/nav_analytics"
        android:name="com.example.prontojob.AnalyticsFragment"
        android:label="@string/menu_analytics"
        tools:layout="@layout/fragment_analytics" />
</navigation>