<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Privacy Policy"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A8A8A8"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/par_pp"
            android:textSize="12sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Information Collection and Use"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A8A8A8"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/infoCOll"
            android:textSize="12sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log Data"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A8A8A8"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/logdata"
            android:textSize="12sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cookies"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A8A8A8"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/cookies"
            android:textSize="12sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Service Providers"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A8A8A8"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/serviceProv"
            android:textSize="12sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Security"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A8A8A8"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/security"
            android:textSize="12sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Links to Other Sites"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A8A8A8"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/linktoSites"
            android:textSize="12sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Children’s Privacy"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A8A8A8"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/Children"
            android:textSize="12sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Changes to This Privacy Policy"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A8A8A8"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/changes"
            android:textSize="12sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contact Us"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A8A8A8"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/ContactUs"
            android:textSize="12sp"/>

    </LinearLayout>

</ScrollView>